@@ -1,0 +1,86 @@
+<?php
+/*
+ * ZenMagick - Extensions for zen-cart
+ * Copyright (C) 2006-2010 zenmagick.org
+ *
+ * Portions Copyright (c) 2003 The zen-cart developers
+ * Portions Copyright (c) 2003 osCommerce
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+?>
+<?php
+
+
+/**
+ * Admin user service.
+ *
+ * @author DerManoMann
+ * @package org.zenmagick.store.admin.services
+ * @version $Id$
+ */
+class ZMAdminUsers extends ZMObject {
+
+    /**
+     * Create new instance.
+     */
+    function __construct() {
+        parent::__construct();
+    }
+
+    /**
+     * Destruct instance.
+     */
+    function __destruct() {
+        parent::__destruct();
+    }
+
+    /**
+     * Get instance.
+     */
+    public static function instance() {
+        return ZMObject::singleton('AdminUsers');
+    }
+
+
+    /**
+     * Get user for the given id.
+     *
+     * @param int id The user id.
+     * @return ZMAdminUser A <code>ZMAdminUser</code> instance or <code>null</code>.
+     */
+    public function getUserForId($id) {
+        $sql = "SELECT *
+                FROM " . TABLE_ADMIN . "
+                WHERE admin_id = :id";
+        $args = array('id' => $id);
+        return ZMRuntime::getDatabase()->querySingle($sql, $args, TABLE_ADMIN, 'AdminUser');
+    }
+
+    /**
+     * Get user for the given user name.
+     *
+     * @param string name The user name.
+     * @return ZMAdminUser A <code>ZMAdminUser</code> instance or <code>null</code>.
+     */
+    public function getUserForName($name) {
+        $sql = "SELECT *
+                FROM " . TABLE_ADMIN . "
+                WHERE admin_name = :name";
+        $args = array('name' => $name);
+        return ZMRuntime::getDatabase()->querySingle($sql, $args, TABLE_ADMIN, 'AdminUser');
+    }
+
+}
